# rail-distances-map

./: README.md
Starter/: download_timetables.py
raildata/raildata/: Cargo.toml
raildata/raildata/src/: fixed_links.rs  lib.rs  record_parsing.rs  stations.rs  timetable.rs  travel_graph.rs  utils.rs
raildata/railserver/: Cargo.toml
raildata/railserver/src/: main.rs
web/webclient/: package-lock.json  package.json
web/webclient/public/: index.html
web/webclient/src/: App.vue  api.js
web/webclient/src/assets/: uk.json
web/webclient/src/components/: MapVisual.vue  SetupPane.vue
