[package]
name = "railserver"
version = "0.1.0"
authors = ["James Lomax <james.lmx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raildata = { version = "^0", path = "../raildata" }
rocket = "0.4.5"
rocket_contrib = "0.4.5"
rocket_cors = "0.5.2"
serde = { version = "1.0.116", features = ["derive"] }
